# OAK_MEND

./: .gitignore  README.md  pyproject.toml
data/wikidata/: predicates.json  predicates4patterns.json  wdpredicates.json  wdqualifiers.json  wdsuperclasses.json  wdtypes.json
data/wikontic-ontology-mappings/: constraint-preprocessing.ipynb  entity_hierarchy.json  entity_type2aliases.json  entity_type2label.json  obj_constraint2prop.json  prop2aliases.json  prop2constraints.json  prop2data_type.json  prop2label.json  subj_constraint2prop.json
okgc/: __init__.py  _mend.py  _oak.py
okgc/datasets/: hotpot.py  loaders.py  musique.py  utils.py
okgc/in_context/: in_context.py
okgc/kg_gen/: __init__.py  kg_gen.py  models.py
okgc/qa/: multi_step_qa.py  vector_rag_qa.py  zero_shot_qa.py
okgc/utils/: aliases.py  filesystem.py  graph.py  metrics.py  openai_wrapper.py  query_patterns.py  sent_embed.py  sparql.py  strings.py  transform.py  typecheck.py  usage.py  vector_index.py
okgc/wikontic/: base_inference_with_db.py  create_ontological_triplets_db.py  create_wikidata_ontology_db.py  openai_utils.py  structured_aligner.py  structured_inference_with_db.py  wikontic.py
prompts/in-context/: extract_predicates_1shot.txt  extract_triples_qualifiers_1shot.txt  extract_triples_qualifiers_1shot_fallback.txt
prompts/kg-gen/: README.md
prompts/oak-mend/: canonicalize_predicate.txt  canonicalize_type.txt  correct_qualifier.txt  correct_triple.txt  (+3 more)
scripts/: utils.py  wdcrawl.py
shell/: format.sh  host_vllm_embedder.sh  host_vllm_llm.sh  print_all_results.sh
(+29 files in other folders)
